# STC

./: README.md
interpolation/CMake interpolation/: CMakeLists.txt  main.cpp
interpolation/CMake interpolation/Math/: CMakeLists.txt  mymath.cpp
interpolation/CMake interpolation/interpolation_build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Main.sln  Main.vcxproj  Main.vcxproj.filters  ZERO_CHECK.proj  ZERO_CHECK.proj.filters  cmake_install.cmake
interpolation/CMake interpolation/interpolation_build/Main.dir/Debug/: Main.exe.recipe  Main.ilk
interpolation/CMake interpolation/interpolation_build/Main.dir/Debug/Main.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
interpolation/CMake interpolation/interpolation_build/Math/: Math.vcxproj  Math.vcxproj.filters  cmake_install.cmake
interpolation/CMake interpolation/interpolation_build/Math/Debug/: Math.lib
interpolation/CMake interpolation/interpolation_build/Math/Math.dir/Debug/Math.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  Math.lastbuildstate
interpolation/CMake interpolation/interpolation_build/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
interpolation/CMake interpolation/interpolation_build/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog
(+41 files in other folders)
